objects/Distribution_Alert_History__c.object
<CustomObject>
    <description>Child object to Distribution Alerts (Master Detail)</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_Description__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Impact</fullName>
                </value>
                <value>
                    <fullName>No customer impact.</fullName>
                </value>
                <value>
                    <fullName>Customers may experience spot service issues.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location1__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Master-detail relationship to Distribution Alerts</description>
        <label>Location</label>
        <referenceTo>Distribution_Alert__c</referenceTo>
        <relationshipName>Distribution_Alerts_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Trucks - No Order Pickup</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Demand/Capacity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Distribution_Detail_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Distribution Detail ID</label>
        <type>Text</type>
    </fields>
    <label>Distribution Alert History</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Alerts History</pluralLabel>
    <recordTypes>
        <fullName>Cooked_Tubs</fullName>
        <active>true</active>
        <description>Cooked Tubs</description>
        <label>Cooked Tubs</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>